--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon/favicon.ico">
-    <title>Junior Dev Jobs</title>
+    <title>Jobletter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Junior Dev Jobs Styles -->
     <link rel="stylesheet" href="css/jdj_styles.css">
@@ -20,7 +20,7 @@
 <!-- Navigation -->
 <nav id="main_nav" class="navbar navbar-light navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="#">juniordevjobs</a>
+        <a class="navbar-brand" href="#">jobletter</a>
         <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
                     <div class="header_text">
 
                         <h1>Get Junior Developer Jobs in Your Inbox</h1>
-                        <h3>Qui ad primis ornatus accusata, his debet apeirian senserit ea.</h3>
+                        <h3>No experience necessary.</h3>
 
                     </div>
 
@@ -125,21 +125,21 @@
                         <img src="images/icons/icn_developer.svg" width="50" height="50"
                              class="img-fluid d-block mx-auto"
                              alt="">
-                        <p>Perfect for developers with 0 to 3 years of experience.</p>
+                        <p>Discover positions perfect for entry-level and junior hires.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="service_item">
                         <img src="images/icons/icn_chunks.svg" width="50" height="50" class="img-fluid d-block mx-auto"
                              alt="">
-                        <p>Bite-sized chunks - because finding your career is a marathon, not a sprint.</p>
+                        <p>Use a platform you're already familar with - your inbox.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="service_item">
                         <img src="images/icons/icn_updates.svg" width="50" height="50" class="img-fluid d-block mx-auto"
                              alt=""/>
-                        <p>Receive updates as often as you like.</p>
+                        <p>Receive updates on your schedule.</p>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         <img src="images/icons/icn_protected.svg" width="50" height="50"
                              class="img-fluid d-block mx-auto"
                              alt=""/>
-                        <p>Will never sell your email.</p>
+                        <p>Own your info - we will never sell your email. Ever.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -203,7 +203,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p>© 2018 JuniorDevJobs. All rights reserved.</p>
+                <p>© 2018 Jobletter. All rights reserved.</p>
             </div>
         </div>
     </div>
