--- a/index.html
+++ b/index.html
@@ -176,18 +176,31 @@
 
                     <h2>Keep me updated with new jobs.</h2>
 
-                    <form id="form_service">
-                        <div class="input-group mb-3">
+
+                    <!-- Begin Mailchimp Signup Form -->
+                    <div id="mc_embed_signup">
+                    <form action="https://guide.us9.list-manage.com/subscribe/post?u=50452eee01aae18a82d9dd092&amp;id=9b8fa5c4b2" method="post" id="form_service" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll" class="input-group mb-3">
+                        
                             <label class="sr-only" for="emailAddressBtm">Name</label>
-                            <input type="email" id="emailAddressBtm" class="form-control"
+                            <!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> -->
+                            <input name="EMAIL" type="email" id="emailAddressBtm" class="form-control"
                                    placeholder="Your email address"
                                    aria-label="Email Address" aria-describedby="email_input">
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_50452eee01aae18a82d9dd092_9b8fa5c4b2" tabindex="-1" value=""></div>
                             <div class="input-group-append">
-                                <button class="btn btn-ju_purple" type="button">Sign up</button>
-                            </div>
+                                <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-ju_purple">
+                            </div>                        
+                        </div>
                         </div>
                     </form>
-
+                    </div>
+                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                    <!--End mc_embed_signup-->
                 </div>
             </div>
         </div>
