--- a/index.html
+++ b/index.html
@@ -60,22 +60,30 @@
                                 <form id="form_header">
                                     <div class="input-group mb-3">
                                         <label class="sr-only" for="emailAddress">Name</label>
-                                        <input type="email" id="emailAddress" class="form-control"
+                                        <input name="EMAIL" type="email" id="emailAddress" class="form-control"
                                                placeholder="Your email address"
                                                aria-label="Email Address" aria-describedby="email_input">
+                                        
+                                        <div id="mce-responses" class="clear">
+                                            <div class="response" id="mce-error-response" style="display:none"></div>
+                                            <div class="response" id="mce-success-response" style="display:none"></div>
+                                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_50452eee01aae18a82d9dd092_9b8fa5c4b2" tabindex="-1" value=""></div>
+
                                         <div class="input-group-append">
-                                            <button class="btn btn-ju_purple" type="button">Sign up</button>
+                                            <input type="submit" value="Sign Up" name="subscribe" class="btn btn-ju_purple">
                                         </div>
                                     </div>
 
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
-                                        <label class="form-check-label" for="inlineRadio1">Weekly</label>
+                                        <input class="form-check-input" type="radio" name="MMERGE5" id="mce-MMERGE5-0" value="Weekly" checked>
+                                        <label class="form-check-label" for="mce-MMERGE5-0">Weekly</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                        <label class="form-check-label" for="inlineRadio2">Monthy</label>
+                                        <input class="form-check-input" type="radio" name="MMERGE5" id="mce-MMERGE5-1" value="Monthly">
+                                        <label class="form-check-label" for="mce-MMERGE5-1"">Monthy</label>
                                     </div>
+
 
 
                                 </form>
@@ -173,9 +181,7 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-3">
 
-
                     <h2>Keep me updated with new jobs.</h2>
-
 
                     <!-- Begin Mailchimp Signup Form -->
                     <div id="mc_embed_signup">
@@ -183,7 +189,6 @@
                         <div id="mc_embed_signup_scroll" class="input-group mb-3">
                         
                             <label class="sr-only" for="emailAddressBtm">Name</label>
-                            <!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> -->
                             <input name="EMAIL" type="email" id="emailAddressBtm" class="form-control"
                                    placeholder="Your email address"
                                    aria-label="Email Address" aria-describedby="email_input">
