--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <!-- Header Form -->
                         <div class="row">
                             <div class="col-lg-12">
-                                <form id="form_header">
+                                <form id="form_header" action="https://guide.us9.list-manage.com/subscribe/post?u=50452eee01aae18a82d9dd092&amp;id=9b8fa5c4b2" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                     <div class="input-group mb-3">
                                         <label class="sr-only" for="emailAddress">Name</label>
                                         <input name="EMAIL" type="email" id="emailAddress" class="form-control"
@@ -204,7 +204,6 @@
                         </div>
                     </form>
                     </div>
-                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
                     <!--End mc_embed_signup-->
                 </div>
             </div>
@@ -237,5 +236,7 @@
 <script src="js/jquery.easing.js"></script>
 <!-- Junior Dev Jobs JS -->
 <script src="js/jdj.js"></script>
+<!-- Mailchimp Stuff -->
+<script type='text/javascript' src='http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 </body>
 </html>
