Add frequency radio to lower form

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
                                 <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-ju_purple">
                             </div>                        
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="MMERGE5" id="mce-MMERGE5-0" value="Weekly" checked>
+                            <label class="form-check-label" for="mce-MMERGE5-0">Weekly</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="MMERGE5" id="mce-MMERGE5-1" value="Monthly">
+                            <label class="form-check-label" for="mce-MMERGE5-1"">Monthy</label>
                         </div>
                     </form>
                     </div>
