Replace mailchimp with formcake

--- a/success.html
+++ b/success.html
@@ -57,37 +57,7 @@
                         <!-- Header Form -->
                         <div class="row">
                             <div class="col-lg-12">
-                                <form id="form_header" action="http://form-cake-backend.us-east-1.elasticbeanstalk.com/api/form/08acf631-6859-434d-bc7c-94f0fd1e1594/submission" method="post">
-                                    <div class="input-group mb-3">
-                                        <label class="sr-only" for="emailAddress">Name</label>
-                                        <input required="true" name="email" type="email" id="emailAddress" class="form-control"
-                                               placeholder="Your email address"
-                                               aria-label="Email Address" aria-describedby="email_input">
-                                        
-                                        <div id="mce-responses" class="clear">
-                                            <div class="response" id="mce-error-response" style="display:none"></div>
-                                            <div class="response" id="mce-success-response" style="display:none"></div>
-                                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_50452eee01aae18a82d9dd092_9b8fa5c4b2" tabindex="-1" value=""></div>
-
-                                        <div class="input-group-append">
-                                            <input type="submit" value="Sign Up" name="subscribe" class="btn btn-ju_purple">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="weekly" id="mce-MMERGE5-0" value="Weekly" checked>
-                                        <label class="form-check-label" for="mce-MMERGE5-0">Weekly</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="monthly" id="mce-MMERGE5-1" value="Monthly">
-                                        <label class="form-check-label" for="mce-MMERGE5-1"">Monthy</label>
-                                    </div>
-
-
-
-                                </form>
-
+                                <h3>Thanks!</h3>
                             </div>
                         </div>
                         <!-- /.Header Form -->
